Fix a styling issue with the Preview button
The button was too close to the others.

--- a/app/assets/stylesheets/components/shared/c-action-bar.scss
+++ b/app/assets/stylesheets/components/shared/c-action-bar.scss
@@ -12,7 +12,10 @@
     transform: translateX(-50%);
   }
 
-  .c-button + .c-button {
+  .c-button + .c-button,
+  .c-button + .button-wrapper,
+  .button-wrapper + .c-button {
+    display: inline-block; // Needed for .button-wrapper
     margin-left: 15px;
   }
 
